CHANGES.txt - 11/14/2001
------------------------

CHANGES IN HTMLDOC v1.8.17

    NEW FEATURES


    CHANGES

	- Made some changes in how COLSPAN and ROWSPAN are
	  handled to better match how Netscape and MSIE format
	  things.

    BUG FIXES

	- The table cell border and background were offset by
	  the cellpadding when they should only be offset by the
	  cellspacing.
	- The buffer used for periods that lead up to the page
	  number in the table-of-contents was not large enough
	  for a legal-size document in landscape format.
	- If a book only contained chapter headings, the PDF
	  bookmarks would be missing the last chapter heading.


CHANGES IN HTMLDOC v1.8.16

    CHANGES

	- Now break before and after DIV groups to match most
	  browsers (the HTML spec is ambivalent about it...)

    BUG FIXES

	- HR elements didn't render properly.
	- Background images didn't render properly and could
	  lock up HTMLDOC.
	- The "HALF PAGE" comment would lock up HTMLDOC -
	  HTMLDOC would keep adding pages until it ran out of
	  memory.
	- SUP and SUB used a fixed (reduced) size instead of
	  using a smaller size from the current one.
	- Empty cells could cause unnecessary vertical alignment
	  on the same row.


CHANGES IN HTMLDOC v1.8.15

    NEW FEATURES

	- Now support media source, type, and color attributes
	  in PS output.
	- Now support per-page size, margins, headers, footers,
	  orientation, and duplexing.
	- Now support plain text for headers and footers, with $
	  variables to include page numbers and so forth.
	- New device control prolog file for printer-specific
	  option commands.
	- Now support a new continuous web page mode that
	  doesn't automatically insert a page break with each
	  HTML file or URL (--continuous).
	- Now draw border around inline images as needed.
	- Now support MacOS X (only command-line at present).
	- Now support the "page-break-before", "text-align",
	  "vertical-align" style attributes, but only for style