@@ -1,5 +1,5 @@
 /*
- * "$Id: config.h,v 1.20.2.20 2001/11/01 16:15:16 mike Exp $"
+ * "$Id: config.h,v 1.20.2.21 2001/11/14 17:40:06 mike Exp $"
  *
  *   Configuration file for HTMLDOC.
  *
@@ -21,63 +21,6 @@
  *       EMail: info@easysw.com
  *         WWW: http://www.easysw.com
  */
-
-/*
- * Locations of files (overridden by the registry...)
- */
-
-#define DOCUMENTATION	"C:/Program Files/HTMLDOC/doc"
-#define HTML_DATA	"C:/Program Files/HTMLDOC"
-
-
-/*
- * Do we have the FLTK library?
- */
-
-#ifndef _CONSOLE
-#  define HAVE_LIBFLTK
-#endif /* !_CONSOLE */
-
-
-/*
- * Do we have the OpenSSL library?
- */
-
-#define HAVE_LIBSSL
-
-
-/*
- * Do we have the image libraries?
- */
-
-#define HAVE_LIBJPEG
-#define HAVE_LIBPNG
-#define HAVE_LIBZ
-
-
-/*
- * Do we have the <locale.h> header file?
- */
-
-#define HAVE_LOCALE_H
-
-
-/*
- * Do we have some of the "standard" string functions?
- */
-
-#define HAVE_STRDUP
-#define HAVE_STRCASECMP
-#define HAVE_STRNCASECMP
-
-
-/*
- * How about snprintf() and vsnprintf()?
- */
-
-#define HAVE_SNPRINTF
-#define HAVE_VSNPRINTF
-
 
 /*
  * What is the version number for this software?
@@ -107,6 +50,84 @@
 
 
 /*
- * End of "$Id: config.h,v 1.20.2.20 2001/11/01 16:15:16 mike Exp $".
+ * Locations of files (overridden by the registry...)
+ */
+
+#define DOCUMENTATION	"C:/Program Files/HTMLDOC/doc"
+#define HTML_DATA	"C:/Program Files/HTMLDOC"
+
+
+/*
+ * Do we have the FLTK library?
+ */
+
+#ifndef _CONSOLE
+#  define HAVE_LIBFLTK
+#endif /* !_CONSOLE */
+
+
+/*
+ * Do we have the Xpm library?
+ */
+
+#undef HAVE_LIBXPM
+
+
+/*
+ * Do we have the OpenSSL library?
+ */
+
+#define HAVE_LIBSSL
+
+
+/*
+ * Do we have the image libraries?
+ */
+
+#define HAVE_LIBJPEG
+#define HAVE_LIBPNG
+#define HAVE_LIBZ
+
+
+/*
+ * Do we need to use <strings.h>?
+ */
+
+#undef HAVE_STRINGS_H
+
+
+/*
+ * Do we have the <locale.h> header file?
+ */
+
+#define HAVE_LOCALE_H
+
+
+/*
+ * Do we have some of the "standard" string functions?
+ */
+
+#define HAVE_STRDUP
+#define HAVE_STRCASECMP
+#define HAVE_STRNCASECMP
+
+
+/*
+ * How about snprintf() and vsnprintf()?
+ */
+
+#define HAVE_SNPRINTF
+#define HAVE_VSNPRINTF
+
+
+/*
+ * Does the "tm" structure contain the "tm_gmtoff" member?
+ */
+
+#undef HAVE_TM_GMTOFF
+
+
+/*
+ * End of "$Id: config.h,v 1.20.2.21 2001/11/14 17:40:06 mike Exp $".
  */
 
